# Leavesync

./: .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  error_handlers.py  exceptions.py  swagger_specs.py
backend/app/constants/: __init__.py  roles.py  status.py
backend/app/controllers/: auth_controller.py  hr_controller.py  leave_controller.py  user_controller.py
backend/app/decorators/: __init__.py  security_headers.py
backend/app/models/: __init__.py  holiday.py  leave.py  mixins.py  permission.py  role.py  user.py  user_role.py
backend/app/routes/: api_docs.py  auth.py  dashboard.py  employees.py  holidays.py  leave_types.py  leaves.py  permissions.py  system.py  users.py
backend/app/schemas/: __init__.py  auth_schema.py  hr_schema.py  leave_schema.py
backend/app/services/: hr_service.py  leave_calculator.py  leave_ledger_service.py  leave_service.py  permission_service.py  user_service.py
backend/app/utils/: api_cache.py  api_versioning.py  audit_logger.py  logger.py  pagination.py  permissions.py  request_validator.py
backend/app/views/: __init__.py  auth_view.py  hr_view.py  leave_view.py
backend/migrations/versions/: a6617094fbf7_initial_schema.py  b7728105gch8_add_half_day_leave_support.py
backend/seeds/: seed_leave_ledger.py  seed_master_data.py  seed_permissions.py  seed_users.py
backend/tests/: conftest.py  conftest_enhanced.py
backend/tests/fixtures/: user_fixtures.py
backend/tests/integration/: test_leave_api.py
frontend/: jest.config.js  (+3 more)
(+85 files in other folders)
