[project]
name = "nexuspulse-alms"
version = "0.1.0"
description = "NexusPulse ALMS Backend"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.3",
    "blinker==1.9.0",
    "click==8.3.1",
    "Flask==3.1.2",
    "flask-cors==6.0.2",
    "Flask-JWT-Extended==4.6.0",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.3.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Mako==1.1.3",
    "MarkupSafe==3.0.3",
    "marshmallow==3.23.2",
    "psycopg2-binary==2.9.11",
    "PyJWT==2.3.0",
    "python-dotenv==1.2.1",
    "SQLAlchemy==2.0.45",
    "Werkzeug==3.1.5",
    "flasgger==0.9.7.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "gunicorn==23.0.0",
]
